# faketime

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/faketime/: __init__.py  _faketime.py  pytest.py
tests/: realtime.py  test_faketime.py
tests/pytest/: conftest.py  test_pytest_fixtures.py
