[project]
name = "faketime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thomas Desrosiers", email = "git@hive.pw" }]
requires-python = ">=3.13"
dependencies = ["time-machine>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "hypothesis>=6.0.0"]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
